# nglview

./: .coveragerc  .gitignore  LICENSE.txt  MANIFEST.in  README.md  codecov.yml  install.json  package.json  pyproject.toml  pytest.ini  tsconfig.json  webpack.config.js
.github/workflows/: build.yml
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
examples/: demo.ipynb  introduction.ipynb
nglview/: __init__.py  _frontend.py  _version.py  example.py
nglview/nbextension/: extension.js
nglview/tests/: conftest.py  test_example.py  test_nbextension_path.py  test_widget.py
src/: extension.ts  gui.js  index.ts  plugin.ts  version.ts  widget.ts  widget_ngl.ts
